<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activity_register"
    android:fitsSystemWindows="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/logo_light"
                android:layout_height="60dp"
                android:layout_width="wrap_content"
                android:layout_weight="0.7" />
            <TextView
                android:text="@string/register_activity_register_user"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="0.3" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/register_activity_nickname"
                android:ems="10"
                android:id="@+id/editTextNickname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/register_activity_email"
                android:id="@+id/editTextEmail" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/register_activity_phone"
                android:id="@+id/editTextPhone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/register_activity_username"
                android:id="@+id/editTextUsername" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/register_activity_password"
                android:id="@+id/editTextPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/register_activity_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>
